<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        >

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/all_content_padding">

            <TextView
                android:id="@+id/projectName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_name"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/pleadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_top_margin"
                android:text="@string/pleadge"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/backers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backers"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/noOfDaysToGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noOfDaysToGo"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/card_top_margin"
                android:background="@color/colorPrimary"/>

        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>