<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textColor="@color/white"
                android:textSize="@dimen/app_title_size"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/kickstarter_logo_green" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/all_content_padding"
                android:text="@string/project_name"
                android:textSize="@dimen/app_title_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/all_content_padding">

                <TextView
                    android:id="@+id/blurb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/blurb_margin"
                    android:text="@string/blurb"
                    android:textSize="@dimen/normal_text_size"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/by"
                android:layout_width="412dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingLeft="@dimen/all_content_padding"
                android:paddingRight="@dimen/all_content_padding"
                android:text="@string/by"
                android:textSize="@dimen/normal_text_size"
                android:layout_marginBottom="30dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/app_title_size"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/all_content_padding"
                    android:paddingRight="@dimen/all_content_padding"
                    android:text="@string/pledged_amount"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/amountValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/app_title_size"
                    android:gravity="right"
                    android:paddingRight="@dimen/all_content_padding"
                    android:text="15823"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/backers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/app_title_size"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/all_content_padding"
                    android:paddingRight="@dimen/all_content_padding"
                    android:text="@string/backers_label"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/backersValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/app_title_size"
                    android:gravity="right"
                    android:paddingRight="@dimen/all_content_padding"
                    android:text="21254"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/app_title_size"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/all_content_padding"
                    android:paddingRight="@dimen/all_content_padding"
                    android:text="@string/country_label"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/countryValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/app_title_size"
                    android:gravity="right"
                    android:paddingRight="@dimen/all_content_padding"
                    android:text="US"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/app_title_size"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/all_content_padding"
                    android:paddingRight="@dimen/all_content_padding"
                    android:text="@string/location_label"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/locationValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/app_title_size"
                    android:gravity="right"
                    android:paddingRight="@dimen/all_content_padding"
                    android:text="Washington, DC"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/funded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/app_title_size"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/all_content_padding"
                    android:paddingRight="@dimen/all_content_padding"
                    android:text="@string/percentage_funded"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/fundedValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/app_title_size"
                    android:gravity="right"
                    android:paddingRight="@dimen/all_content_padding"
                    android:text="186"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/moreButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/all_content_padding"
                android:background="@drawable/custom_button"
                android:onClick="projectWebPage"
                android:text="@string/read_more"
                android:textColor="#fff"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="16dp"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>